# ChangeLog for app-portage/portage-bashrc-mv
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*portage-bashrc-mv-11.7 (13 Oct 2012)

  13 Oct 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Parse first line in cflags correctly.

*portage-bashrc-mv-11.6 (07 Oct 2012)

  07 Oct 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*portage-bashrc-mv-11.5 (07 Oct 2012)

  07 Oct 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Support gpo

*portage-bashrc-mv-11.4 (10 Sep 2012)

  28 Sep 2012; Martin Väth <martin@mvath.de>
  Bump to EAPI=5

  10 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Rely that gold linker is used with clang:
  Do not filter -flto for USE_NONGNU

*portage-bashrc-mv-11.3 (08 Sep 2012)

  08 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Support for Non-GNU compilers (e.g. clang).

*portage-bashrc-mv-11.2 (08 Sep 2012)

  08 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Fixes CCACHE_*

*portage-bashrc-mv-11.1 (07 Sep 2012)

  07 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Support for CCACHE_*

*portage-bashrc-mv-11.0 (16 Jun 2012)

  16 Jun 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Use masked-packages from app-portage/eix

*portage-bashrc-mv-10.12 (21 May 2012)

  21 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*portage-bashrc-mv-10.11 (20 May 2012)

  20 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*portage-bashrc-mv-10.9 (11 May 2012)

  12 May 2012; Martin Väth <martin@mvath.de>
  base->eutils

  11 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*portage-bashrc-mv-10.8 (07 May 2012)

  07 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*portage-bashrc-mv-10.7 (08 Apr 2012)
