@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-bashrc-mv-12.0 (04 Nov 2012)
+
+  04 Nov 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild. Globally rename GPO->PGO, gpo->pgo
+
 *portage-bashrc-mv-11.7 (13 Oct 2012)
 
   13 Oct 2012; Martin Väth <martin@mvath.de>
